# smart-handles

./: .gitignore  LICENSE  Makefile  README.md  cabal.project  clear-ci-nix-cache  flake.nix  plutarch-template.cabal  smart-handles.cabal
.github/workflows/: clear-cache.yaml  main.yaml
app/: Main.hs
compiled/: smartHandle.plutus  smartHandleRouter.plutus  smartHandleSimple.json  smartHandleStake.json  smartHandleStake.plutus  yieldFarming.plutus
offchain/: common.ts  config.ts  create-swap-order.ts  deno.json  route-swap-order.ts
src/: BatchValidator.hs  Constants.hs  SingleValidator.hs  SmartHandles.hs  StakingValidator.hs  Utils.hs
src/MinSwap/: AdaToMin.hs
test/: SmartHandlesSpec.hs  Spec.hs
