cabal-version:      3.0
name:               smart-handles
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             colll78
maintainer:         colll78@colll78

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

flag optimized
  description:
    If optimized is True, some checks are disabled. Disable checks to create optimized scripts.

  default:     False
  manual:      True

common lang
  ghc-options:
    -Werror -Wall -Wcompat -Wincomplete-uni-patterns
    -Wno-unused-do-bind -Wno-partial-type-signatures
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds -Wunused-do-bind

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    QualifiedDo
    RankNTypes
    RecordWildCards
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns
    NoFieldSelectors
    OverloadedRecordDot

  default-language:   GHC2021

library
  import:          lang
  exposed-modules:
    SmartHandles
    Utils

  other-modules:   Conversions

  -- Compile

  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , cardano-binary
    , data-default
    , liqwid-plutarch-extra
    , plutarch
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , ply-core
    , ply-plutarch
    , serialise
    , text

  hs-source-dirs:  src

  if flag(optimized)
    hs-source-dirs: src-optimized

  else
    hs-source-dirs: src-checked

common dependencies
  build-depends:
    , aeson
    , aeson-pretty
    , ansi-terminal
    , base
    , base16-bytestring
    , bytestring
    , cardano-binary
    , cborg
    , data-default
    , directory
    , liqwid-plutarch-extra
    , plutarch
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , ply-core
    , ply-plutarch
    , serialise
    , text

executable smart-handles
  import:         lang, dependencies
  main-is:        Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:  smart-handles
  hs-source-dirs: app
